funcionalidad pujar -> aun no funciona