@@ -7,6 +7,8 @@ import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.web.bind.annotation.RequestParam;
+
 
 import es.ucm.fdi.iw.business.dto.ProductDTO;
 import es.ucm.fdi.iw.business.mapper.SubastaMapper;
@@ -15,39 +17,49 @@ import es.ucm.fdi.iw.business.repository.SubastaRepository;
 
 @Service
 public class ProductServiceImpl implements ProductService {
-    
-    private static Map<Integer, ProductDTO> objetos;
 
-    private SubastaRepository subastaRepository;
+    private final SubastaRepository subastaRepository;
 
     @Autowired
     public ProductServiceImpl(SubastaRepository subastaRepository) {
         this.subastaRepository = subastaRepository;
     }
-    
-    // static {
-    //     objetos = new HashMap<>();
-    //     objetos.put(1, new ProductDTO("Nombre 1", "Descripcion 1", 50.00));
-    //     objetos.put(2, new ProductDTO("Nombre 2", "Descripcion 2", 51.00));
-    //     objetos.put(3, new ProductDTO("Nombre 3", "Descripcion 3", 52.00));
-    // }
 
-    @Override
-    public Map<Integer, ProductDTO> getProducts() {
-        return objetos;
-    }
+    
 
     @Override
     public List<ProductDTO> getAllProducts() {
-        // List<Subasta> products = subastaRepository.findAll();
-
-        // return new ArrayList<>();
-        return subastaRepository.findAll().stream().map(SubastaMapper.INSTANCE::subastaToProductDTO).toList();
+        // Mapear Subastas a ProductDTO
+        return subastaRepository.findAll().stream()
+                .map(SubastaMapper.INSTANCE::subastaToProductDTO)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public ProductDTO getProduct(final int id) {
-        return objetos.get(id);
+    public Map<Long, ProductDTO> getProducts() {
+        return subastaRepository.findAll().stream()
+                .collect(Collectors.toMap(Subasta::getId, SubastaMapper.INSTANCE::subastaToProductDTO));
+    }
+
+
+
+
+    @Override
+    public ProductDTO getProduct(long id) {
+        return subastaRepository.findById(Long.valueOf(id)) // Convertimos id a Long
+                .map(SubastaMapper.INSTANCE::subastaToProductDTO)
+                .orElse(null);
+    }
+
+
+    @Override
+    public void updateProduct(ProductDTO producto) {
+        Subasta subasta = subastaRepository.findById(producto.getId())
+                                        .orElseThrow(() -> new RuntimeException("Subasta no encontrada"));
+
+        subasta.setPrecio(producto.getPrecio()); 
+        subastaRepository.save(subasta);  
     }
 
 }
+
